# tatetuck-bot

./: .env.example  .gitignore  BOT_GUIDE.md  DUAL_AUDIT_IMPLEMENTATION_ROADMAP.md  FINANCE_GROUNDING.md  METHODOLOGY.md  Makefile  README.md  archive_vnext.py  backfill_vnext.py  bootstrap_history_vnext.py  dashboard.html  dashboard_vnext.py  debug_signals.py  discord_bot.py  evaluate.py  evaluate_vnext.py  main.py  monitor_vnext.py  operate_vnext.py  prepare.py  program.md  pyproject.toml  readiness_vnext.py  refresh_research_book_vnext.py  report_BEAM.md  report_CRSP.md  requirements.txt  research_audit_vnext.py  results.tsv  strategy.py  sync_universe_vnext.py  trade_vnext.py
.github/workflows/: ci.yml
biopharma_agent/: types.py
biopharma_agent/agents/: pubmed_agent.py  researcher.py
biopharma_agent/data/: clinical_trials.py  fda.py  finance.py  pubmed.py
biopharma_agent/models/: epi_model.py  pos_estimator.py
biopharma_agent/vnext/: __init__.py  archive.py  attribution.py  audit.py  autonomy.py  catalyst.py  dashboard.py  entities.py  eodhd.py  evaluation.py  execution.py  execution_model.py  facade.py  failure_universe.py  features.py  graph.py  history.py  kol_proxy.py  labels.py  models.py  (+13 more)
tests/: test_data_api.py  test_discord_bot.py  test_finance.py  test_strategy.py  test_vnext_audit.py  test_vnext_bootstrap_history.py  test_vnext_catalyst.py  test_vnext_dashboard.py  test_vnext_eodhd.py  test_vnext_execution.py  test_vnext_history.py  test_vnext_monitor.py  test_vnext_ops.py  test_vnext_pipeline.py  test_vnext_platform.py  test_vnext_validation.py
(+3 files in other folders)
